--- a/.github/workflows/Boobedbeauty.yml
+++ b/.github/workflows/Boobedbeauty.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           pip install --no-cache-dir --prefer-binary -r requirements.txt
           sed -i "s/TokenTimeIsBackBuddyss/${{ secrets.LICHESS_KEY }}/g" config.yml
-          chmod +x ./engines/stockfish-ubuntu-x86-64-bmi2 
+          chmod +x ./engines/stockfish-ubuntu-x86-64-bmi2 ./engines/supraengine
 
       - name: Run Bot
         run: |
