--- a/.github/workflows/Boobedbeauty.yml
+++ b/.github/workflows/Boobedbeauty.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Run Bot
         run: |
           echo "Starting bot..."
-          python3 -u user_interface.py --debug "tournament Kqul9pAe" &
+          python3 -u user_interface.py "tournament Kqul9pAe" &
           PID=$!
           # Auto-exit before GitHub 6h limit
           ( sleep 20700 && echo "Time up. Killing bot..." && kill -SIGTERM $PID ) &
