--- a/config.yml
+++ b/config.yml
@@ -36,7 +36,7 @@ engines:
   standard_human:
     dir: "./engines"
     name: "supraengine"
-    ponder: true
+    ponder: false
     silence_stderr: false
     move_overhead_multiplier: 2.0
     uci_options:
