--- a/config.yml
+++ b/config.yml
@@ -24,7 +24,7 @@ engines:
       # nodes: 8000000
   standard: 
     dir: "./engines"
-    name: "stockfish-ubuntu-x86-64-bmi2"
+    name: "stockfish-7-x64-bmi2"
     ponder: true
     silence_stderr: false 
     move_overhead_multiplier: 10.0
