--- a/config.yml
+++ b/config.yml
@@ -24,12 +24,12 @@ engines:
       # nodes: 8000000
   standard: 
     dir: "./engines"
-    name: "stockfish-7-x64-bmi2"
+    name: "reckless-linux-avx2"
     ponder: true
     silence_stderr: false 
     move_overhead_multiplier: 10.0
     uci_options: 
-      Threads: 8 
+      Threads: 4
       Hash: 4096
       Move Overhead: 100
     limits: 
