--- a/config.yml
+++ b/config.yml
@@ -24,14 +24,16 @@ engines:
       # nodes: 8000000
   standard: 
     dir: "./engines"
-    name: "lunar-linux-x64-v3"
+    name: "lc0"
     ponder: true
     silence_stderr: false 
     move_overhead_multiplier: 10.0
     uci_options: 
       Threads: 4
-      Hash: 4096
-      MoveOverhead: 120
+      NNCacheSize: 400000
+      MoveOverheadMS: 200
+      Backend: "dnnl"
+      MiniBatchSize: 4 
     limits: 
   standard_human:
     dir: "./engines"
