--- a/.github/workflows/idk.yml
+++ b/.github/workflows/idk.yml
@@ -37,13 +37,15 @@ jobs:
       - name: Install dependencies & prepare
         run: |
           pip install --no-cache-dir --prefer-binary -r requirements.txt
+          sudo apt-get update
+          sudo apt-get install -y libdnnl-dev
           sed -i "s/TokenTimeIsBackBuddyss/${{ secrets.LICHESS_KEY }}/g" config.yml
           chmod +x ./engines/lunar-linux-x64-v3 ./engines/supraengine
 
       - name: Run Bot
         run: |
           echo "Starting bot..."
-          python3 -u user_interface.py "matchmaking" "tournament Kqul9pAe" "tournament UuOCcu0j" &
+          python3 -u user_interface.py "tournament Stng7QXL" "tournament UuOCcu0j" &
           PID=$!
           # Auto-exit before GitHub 6h limit
           ( sleep 20700 && echo "Time up. Killing bot..." && kill -SIGTERM $PID ) &
