--- a/.github/workflows/idk.yml
+++ b/.github/workflows/idk.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Run Bot
         run: |
           echo "Starting bot..."
-          python3 -u user_interface.py "tournament Stng7QXL" "tournament UuOCcu0j" &
+          python3 -u user_interface.py "matchmaking" "tournament UuOCcu0j" &
           PID=$!
           # Auto-exit before GitHub 6h limit
           ( sleep 20700 && echo "Time up. Killing bot..." && kill -SIGTERM $PID ) &
