--- a/.github/workflows/idk.yml
+++ b/.github/workflows/idk.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           pip install --no-cache-dir --prefer-binary -r requirements.txt
           sed -i "s/TokenTimeIsBackBuddyss/${{ secrets.LICHESS_KEY }}/g" config.yml
-          chmod +x ./engines/komodo-14.1-linux-bmi2 ./engines/supraengine
+          chmod +x ./engines/dragon-linux-avx2 ./engines/supraengine
 
       - name: Run Bot
         run: |
