--- a/config.yml
+++ b/config.yml
@@ -247,7 +247,7 @@ matchmaking:
       variant: standard
 
 messages:
-  greeting: "Konnichiwa guzaimase! ❤️‍🔥Using help of SupraNova11 Type !help to glimpse my arsenal. Best of luck"
+  greeting: "Konnichiwa guzaimase! ❤️‍🔥Using help of {engine} embedded in {me} Type !help to glimpse my arsenal. Best of luck"
   goodbye: "GGs, ezz. May we meet again, may I win again 💶 {me} signing off!"
   greeting_spectators: "ITZ Supranova11.0.0 in {me} competing for more depth with @{opponent} Type !help for a list of commands."
   goodbye_spectators: "SIMULATION TERMINATED @{opponent}.May our paths cross again!?Thanks For watching, {me} signing off!"
