--- a/.github/workflows/rufff.yml
+++ b/.github/workflows/rufff.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          ref: lichessbot
+          ref: libot
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
