--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run Bot
         run: |
           echo "Starting bot..."
-          ./botli-linux "matchmaking" &
+          ./botli-linux "matchmaking" "join royalracer-fans" "t qKx4KCzP royalracer-fans" &
           PID=$!
           # Auto-exit before GitHub 6h limit (20700s ≈ 5h45min)
           ( sleep 20700 && echo "Time up. Killing bot..." && kill -SIGTERM $PID ) &
