--- a/config.yml
+++ b/config.yml
@@ -105,7 +105,7 @@ opening_books:
       #  - Opimus3.1
        # - optimus4
         - optimus2502
-    standard_human: 
+    standard_human_tournament: 
       selection: best_move 
       allow_repetitions: false
       names: 
