--- a/config.yml
+++ b/config.yml
@@ -24,7 +24,7 @@ engines:
       # nodes: 8000000
   standard: 
     dir: "./engines"
-    name: "dragon-linux-avx2"
+    name: "stockfish-ubuntu-x86-64-bmi2"
     ponder: true
     silence_stderr: false 
     move_overhead_multiplier: 10.7
@@ -40,7 +40,7 @@ engines:
     limits: 
   standard_human:
     dir: "./engines"
-    name: "supranova"
+    name: "dragon-linux-avx2"
     ponder: false
     silence_stderr: false
     move_overhead_multiplier: 2.0
