--- a/config.yml
+++ b/config.yml
@@ -214,10 +214,10 @@ challenge:
     - rapid
   bot_modes:
    # - casual
-    - rated
+   # - rated
   human_modes:
     #- casual
-    - rated
+    #- rated
 
 matchmaking:
   delay: 676
